src/index.css
body {
  background-color: #f2f4f6;
}
hr {
  height: 3px;
  margin: 0.9rem 3rem;
  border-top: #00214d 3px dashed;
}

.code-box-demo {
  text-align: center;
}
.ant-layout-header,
.ant-layout-footer {
  color: #00214d;
  background:#f2f4f6;
}

.ant-layout-sider {
  color: #fff;
  border: #00214d 3px dashed;
  padding: 1rem;
  /* margin-left: 0.5rem;
  background: white; */
  background: #232946;
  /* max-width: 25% !important; */
  min-width: 25% !important;
  width: 25% !important;
  border-radius: 10px;
  box-shadow: 0 0 10px rgba(0,0,0,0.5); /* Параметры тени */
}

.ant-layout-content {
  color: #00214d;
  background: #fffffe;
  padding: 1rem 0rem;
}


[data-theme="dark"] .ant-layout-header,
[data-theme="dark"] .ant-layout-footer {
  background: #fffffe;
}
[data-theme="dark"] .ant-layout-sider {
  background: #3499ec;
}
[data-theme="dark"] .ant-layout-content {
  background: #107bcb;
}

